[gd_scene load_steps=9 format=2]

[ext_resource path="res://source/LevelDoor/LevelDoor.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="QuadMesh" id=1]
size = Vector2( 2, 4 )

[sub_resource type="SpatialMaterial" id=2]
flags_unshaded = true
albedo_color = Color( 0, 1, 0.419608, 1 )

[sub_resource type="SpatialMaterial" id=3]
resource_local_to_scene = true
flags_unshaded = true
albedo_color = Color( 1, 0, 0.494118, 1 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 2.2, 2, 1.6 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0.490196 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[node name="LevelDoor" type="Spatial"]
script = ExtResource( 1 )

[node name="Back" type="MeshInstance" parent="."]
visible = false
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Next" type="MeshInstance" parent="."]
material_override = SubResource( 3 )
mesh = SubResource( 1 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.6 )
shape = SubResource( 4 )

[node name="KeyPromptParent" type="Node2D" parent="."]

[node name="KeyPrompt" type="Node2D" parent="KeyPromptParent"]
visible = false
position = Vector2( 440, 384 )

[node name="Panel" type="Panel" parent="KeyPromptParent/KeyPrompt"]
margin_right = 160.0
margin_bottom = 68.0
custom_styles/panel = SubResource( 6 )

[node name="Label" type="Label" parent="KeyPromptParent/KeyPrompt"]
margin_right = 160.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 5 )
text = "F

End level"
align = 1
valign = 1

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
